Fixed overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,9 @@ html, body{
     transform: rotate(-90deg)!important;
 }
 
+.contenedor-general{
+    overflow-x: hidden;
+}
 
 @media (max-width: 768px){
     html, body{
